ncc/testsuite/positive/denormalized-generic-constraints-1.n
public interface IFoo { }

public class Foo : IFoo
{
}

public class Bar[T] where T : Foo, IFoo
{
}
public class Testing {
  public B : Bar[Foo]{ get; set; }
}