ncc/testsuite/negative/Issue-0814-2.n
public interface I1[T] { }
public class X[T] : I1[int], I1[T] //E: cannot implement both
{
}